--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://franciscovalferreira.github.io/valentines/",
+  "homepage": "https://www.o-dia-dos-namorados-e-no-santo-antonio.pt",
   "name": "valentines",
   "version": "0.1.0",
   "private": true,
